--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@use-expo/font": "^2.0.0",
+    "alibabacloud-iot-device-sdk": "^1.2.8",
     "expo": "^45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-asset": "~8.5.0",
@@ -30,12 +31,16 @@
     "galio-framework": "^0.8.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-htmlview": "^0.16.0",
     "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
+    "ws": "^1.8.8",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1"
+    "react-native-screens": "~3.11.1",
+    "react-native-webview": "^11.26.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~9.1.0"
