--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
+    "@os-team/i18next-react-native-language-detector": "^1.0.21",
     "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/compat": "^5.1.25",
     "@react-navigation/drawer": "5.12.4",
@@ -28,19 +30,24 @@
     "expo-asset": "~8.5.0",
     "expo-font": "~10.1.0",
     "expo-modules-core": "~0.9.2",
+    "expo-splash-screen": "~0.15.1",
     "galio-framework": "^0.8.0",
+    "i18next": "^22.4.6",
+    "i18next-react-native-language-detector": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^12.1.1",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-htmlview": "^0.16.0",
+    "react-native-locale-detector": "^1.0.1",
     "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
-    "ws": "^1.8.8",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-webview": "^11.26.0"
+    "react-native-webview": "11.18.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~9.1.0"
